replication debugging, for 2 nodes it works. For 3, it works for 2 out of 3 nodes